enforcers/kube_enforcer/kubernetes_and_openshift/manifests/kube_enforcer_advanced_trivy/003_kube_enforcer_deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: aqua-kube-enforcer
  namespace: aqua
spec:
  ports:
    - port: 443
      targetPort: 8443
      name: envoy
  selector:
    app: aqua-kube-enforcer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aqua-kube-enforcer
  namespace: aqua
  labels:
    app: aqua-kube-enforcer
    aqua.component: kubeenforcer
spec:
  #This is the recommended value, but can be configured
  replicas: 1
  template:
    metadata:
      labels:
        app: aqua-kube-enforcer
        aqua.component: kubeenforcer
    spec:
      serviceAccountName: aqua-kube-enforcer-sa
      containers:
        - name: kube-enforcer
          image: registry.aquasec.com/kube-enforcer:2022.4
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
          ports:
            - containerPort: 8449
            - containerPort: 8442
          volumeMounts:
            - name: "certs"
              mountPath: "/certs"
            - name: "envoy-shared"
              mountPath: "/etc/aquasec/envoy"
          #  - name: aqua-grpc-kube-enforcer
          #    mountPath: /opt/aquasec/ssl
        - name: envoy
          image: registry.aquasec.com/envoy:2022.4
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh", "-c", "cp /etc/envoy/cds.yaml /etc/aquasec/envoy/cds.yaml && touch /etc/aquasec/envoy/ca-certificates.crt && envoy -c /etc/envoy/envoy.yaml"]
          volumeMounts:
            - name: "envoy-config"
              mountPath: "/etc/envoy"
            - name: "certs"
              mountPath: "/etc/ssl/envoy"
            - name: "envoy-shared"
              mountPath: "/etc/aquasec/envoy"
          ports:
            - containerPort: 8443
              protocol: TCP
          readinessProbe:
            exec:
              command:
              - cat
              - /etc/aquasec/envoy/configured
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: "certs"
          secret:
            secretName: "aqua-kube-enforcer-certs"
        - name: "envoy-config"
          configMap:
            name: "ke-envoy-conf"
        - name: "envoy-shared"
          emptyDir: {}
      #  - name: aqua-grpc-enforcer
      #    secret:
      #      secretName: aqua-grpc-kube-enforcer
      imagePullSecrets:
        - name: aqua-registry
  selector:
    matchLabels:
      app: aqua-kube-enforcer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trivy-operator
  namespace: aqua
  labels:
    app.kubernetes.io/name: trivy-operator
    app.kubernetes.io/instance: trivy-operator
    app.kubernetes.io/version: "0.30.0"
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: trivy-operator
      app.kubernetes.io/instance: trivy-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: trivy-operator
        app.kubernetes.io/instance: trivy-operator
    spec:
      serviceAccountName: trivy-operator
      automountServiceAccountToken: true
      containers:
        - name: "trivy-operator"
          image: "docker.io/aquasec/trivy-operator:0.30.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: metrics
              containerPort: 8080
            - name: probes
              containerPort: 9090
          readinessProbe:
            httpGet:
              path: /readyz/
              port: probes
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz/
              port: probes
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 10
          resources:
            {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
      securityContext:
        {}
